<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:orientation="vertical"
    tools:context=".views.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_border"
        android:backgroundTint="@color/bg_dark_2"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="30dp"
            android:text="@string/female"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"

            android:layout_marginStart="10dp"
            android:src="@drawable/ic_person_female" />

        <View

            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="40dp"
            android:background="@color/bar_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/everyone"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_border"
        android:backgroundTint="@color/bg_dark_2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:src="@drawable/ic_placeholder" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/circularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:indicatorSize="200dp"
                app:trackColor="@color/mustard"
                app:trackThickness="3dp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="40dp"
            android:text="@string/find_best_match"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ريهانا فاروق"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="العربية السعودية"
                android:textColor="@color/sky_blue_text"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_border"
                    android:backgroundTint="@color/purple"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="10dp"
                    android:text="@string/skip"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_border"
                    android:backgroundTint="@color/purple"
                    android:layout_marginStart="15dp"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="10dp"
                    android:text="@string/accept"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_border"
        android:backgroundTint="@color/bg_dark_2"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_diamond"
            android:gravity="center"
            android:text="200"
            android:textColor="@color/mustard"
            android:textSize="17sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/massey"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </RelativeLayout>

</LinearLayout>